--- a/Translations/kk-KZ/Items.txt
+++ b/Translations/kk-KZ/Items.txt
@@ -1,13 +1,13 @@
 0~Тазалаушының кілт картасы
-1~Scientist Keycard
-2~Research Supervisor Keycard
-3~Zone Manager перне картасы
-4~Gard Keycard
+1~Ғалым кілт картасы
+2~Ғылыми жетекші кілт картасы
+3~Аймақ менеджері перне картасы
+4~Gard кілт картасы
 5~MTF жеке кілт картасы
-6~Containment Engineer кілт картасы
+6~Инженер-қорғау кілт картасы
 7~MTF сержант кілт картасы
 8~MTF капитан кілт картасы
-9~Facility Manager кілт картасы
+9~Мекеме менеджерінің картасы 
 10~Хаос көтерілісшілеріне қол жеткізу құрылғысы
 11~O5 деңгейлі пернелер картасы
 12~Радио
@@ -22,7 +22,7 @@
 23~FSP-9
 24 ~ Логис
 25~Жарылғыш граната~Бум!
-26~Flashbang Grenade~Жауларыңызды соқыр етеді.
+26~ЖАРҚЫН ГРАНАТА~Жауларыңызды соқыр етеді.
 30~COM-18
 31~SCP-018~Төтенше тиімділікпен секіруге қабілетті супербол.
 32~SCP-268~Тозған кезде, кез келген пайдаланушы әрекеттесуі үзілмейінше, сізді уақытша көрінбейтін етеді.
